force-app/main/default/objects/Account/fields/Customer_Success_Director__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INTEGRATION FIELD: Used heavily by Gainsight;
Used in query to populate the Tenant object and in Internal Salesforce Updater Query and CSEVentProcessor Monthly &amp; Weekly queries.</description>
    <label>CS Team Lead/RVP (to be depreciated)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>