force-app/main/default/objects/Account/fields/Customer_Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INTEGRATION FIELD: Used heavily by Gainsight.;
Used in query to maintain tenant object information.</description>
    <label>CSM/AM (to be depreciated)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>