force-app/main/default/objects/Account/fields/Customer_Success_RVP__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_RVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INTEGRATION FIELD: Used heavily by Gainsight. RVP assigned to customer, Customer Success field.
Used in query to maintain tenant object information.</description>
    <inlineHelpText>RVP assigned to Customer alongside CSD</inlineHelpText>
    <label>CS Segment Lead/VP (to be depreciated)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts9</relationshipName>
    <type>Lookup</type>
</CustomField>