force-app/main/default/objects/Account/fields/Customer_Success_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Segment__c</fullName>
    <description>This field is used in Gainsight scoring rules.  Any changes to this field, including ADDING OR REMOVING picklist values, should be evaluated against those rules to ensure the added/removed values are properly accounted for.  

Req6255:  Separate customers by segment/tier within Salesforce and Gainsight; these tiers do not always align to Sales team.</description>
    <inlineHelpText>Used with Gainsight Scoring rules.</inlineHelpText>
    <label>Customer Success Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Named Accounts</fullName>
            </value>
            <value>
                <fullName>Core Global</fullName>
            </value>
            <value>
                <fullName>Core Enterprise</fullName>
            </value>
            <value>
                <fullName>Core Mid-Market</fullName>
            </value>
            <value>
                <fullName>Core SMB</fullName>
            </value>
            <value>
                <fullName>FS Global</fullName>
            </value>
            <value>
                <fullName>FS Enterprise</fullName>
            </value>
            <value>
                <fullName>FS Mid-Market</fullName>
            </value>
            <value>
                <fullName>EMEA Core Global</fullName>
            </value>
            <value>
                <fullName>EMEA Core Enterprise</fullName>
            </value>
            <value>
                <fullName>EMEA Core Mid-Market</fullName>
            </value>
            <value>
                <fullName>EMEA FS Global</fullName>
            </value>
            <value>
                <fullName>EMEA FS Enterprise</fullName>
            </value>
            <value>
                <fullName>EMEA FS Mid-Market</fullName>
            </value>
            <value>
                <fullName>APAC Mid-Market</fullName>
            </value>
            <value>
                <fullName>APAC FS Global</fullName>
            </value>
            <value>
                <fullName>APAC FS Enterprise</fullName>
            </value>
            <value>
                <fullName>APAC Core Mid-Market</fullName>
            </value>
            <value>
                <fullName>APAC Core Enterprise</fullName>
            </value>
            <value>
                <fullName>APAC Core Global</fullName>
            </value>
            <value>
                <fullName>DIGITAL</fullName>
            </value>
            <value>
                <fullName>DIGITAL + SPECIALTY LS</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
            <value>
                <fullName>FS TEAM I</fullName>
            </value>
            <value>
                <fullName>FS TEAM II</fullName>
            </value>
            <value>
                <fullName>GLOBAL</fullName>
            </value>
            <value>
                <fullName>INTL</fullName>
            </value>
            <value>
                <fullName>MM</fullName>
            </value>
            <value>
                <fullName>SPECIALTY - LEARNING</fullName>
            </value>
            <value>
                <fullName>SPECIALTY - LEARNING/SOCIAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>