force-app/main/default/objects/Account/fields/Data_Analysis_Tools__c.field-meta.xml
<CustomField>
    <fullName>Data_Analysis_Tools__c</fullName>
    <label>Data Analysis Tools</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>Power BI</fullName>
            </value>
            <value>
                <fullName>Domo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>