force-app/main/default/objects/Account/fields/Data_Quality_Account_Match__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Account_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFTM-6736</description>
    <label>Data Quality Account Match</label>
    <type>Checkbox</type>
</CustomField>