force-app/main/default/objects/Account/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <description>Used by Murugan to identify when an account was assigned to the owner</description>
    <inlineHelpText>Indicates when the account was assigned to the owner</inlineHelpText>
    <label>Data Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>