force-app/main/default/objects/Account/fields/DataFox_Industry__c.field-meta.xml
<CustomField>
    <fullName>DataFox_Industry__c</fullName>
    <description>For use by DataFox to store Industry value</description>
    <label>DataFox Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>