force-app/main/default/objects/Account/fields/DataFox_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>DataFox_Sub_Industry__c</fullName>
    <description>For use in storing DataFox sub Industry information</description>
    <label>DataFox Sub-Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>