force-app/main/default/objects/Account/fields/Date_Last_Updated_Number_of_Sellers__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Updated_Number_of_Sellers__c</fullName>
    <description>Date Field to be updated anytime the field Number of Sellers is modified.</description>
    <label>Date Last Updated Number of Sellers</label>
    <type>Date</type>
</CustomField>