force-app/main/default/objects/Account/fields/Date_of_ABM_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_ABM_Assignment__c</fullName>
    <label>Date of ABM Assignment</label>
    <type>Date</type>
</CustomField>