force-app/main/default/objects/Account/fields/Date_of_MQA_Alert__c.field-meta.xml
<CustomField>
    <fullName>Date_of_MQA_Alert__c</fullName>
    <description>GTMS-5430</description>
    <label>Date of MQA Alert</label>
    <type>Date</type>
</CustomField>