force-app/main/default/objects/Account/fields/Days_in_Target__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Target__c</fullName>
    <description>Used in 6sense metrics</description>
    <label>Days in Target</label>
    <type>Date</type>
</CustomField>