force-app/main/default/objects/Account/fields/Days_to_Production__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Production__c</fullName>
    <description>INTEGRATION FIELD: Used heavily in reporting to board within Gainsight.</description>
    <formula>Production_Date__c -  Purchase_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Production</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>