force-app/main/default/objects/Account/fields/DCD__c.field-meta.xml
<CustomField>
    <fullName>DCD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inside Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>