force-app/main/default/objects/Account/fields/DCD_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>DCD_Is_Active__c</fullName>
    <formula>DCD__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inside Sales Manager Is Active</label>
    <type>Checkbox</type>
</CustomField>