force-app/main/default/objects/Account/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Journey Stage: Decision – The buying group has selected a vendor and is working on contracting. This is a late-stage opportunity that is likely to close.</description>
    <label>Decision</label>
    <type>Checkbox</type>
</CustomField>