force-app/main/default/objects/Account/fields/Dedicated_Parent__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dedicated Parent</label>
    <type>Checkbox</type>
</CustomField>