force-app/main/default/objects/Account/fields/Demandbase_Journey_Stage__c.field-meta.xml
<CustomField>
    <fullName>Demandbase_Journey_Stage__c</fullName>
    <description>Demandbase Journey Stage field synced from Lessonly SF Org</description>
    <label>Demandbase Journey Stage</label>
    <length>40</length>
    <type>Text</type>
</CustomField>