force-app/main/default/objects/Account/fields/Demandbase_Pipeline_Predict_Score__c.field-meta.xml
<CustomField>
    <fullName>Demandbase_Pipeline_Predict_Score__c</fullName>
    <description>Synced from Lessonly Demandbase fields</description>
    <label>Demandbase Pipeline Predict Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>