force-app/main/default/objects/Account/fields/DF_Stage__c.field-meta.xml
<CustomField>
    <fullName>DF_Stage__c</fullName>
    <description>Created with SFTM-7184 - to save the datafox package field data from datafox_stage__c</description>
    <label>DF Stage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>