force-app/main/default/objects/Account/fields/DF_Technographics__c.field-meta.xml
<CustomField>
    <fullName>DF_Technographics__c</fullName>
    <label>DF Technographics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>