force-app/main/default/objects/Account/fields/Digital_CS__c.field-meta.xml
<CustomField>
    <fullName>Digital_CS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field deperication- GTMS-5133
FLS removed on 25-11-2025.</description>
    <inlineHelpText>Account identified as part of tech-touch program in Gainsight</inlineHelpText>
    <label>Digital CS</label>
    <type>Checkbox</type>
</CustomField>