force-app/main/default/objects/Account/fields/Direct_Integration__c.field-meta.xml
<CustomField>
    <fullName>Direct_Integration__c</fullName>
    <inlineHelpText>Please list any directly integrated platforms the customer uses, including CRM systems, such as SFDC or Dynamics. Typically API-level integrations. If one does not exist, please list in the custom integration field.</inlineHelpText>
    <label>Direct Integration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HubSpot</fullName>
            </value>
            <value>
                <fullName>Marketo</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Dynamics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>