force-app/main/default/objects/Account/fields/Displaced_by_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Displaced_by_Competitor__c</fullName>
    <label>Displaced by Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitors_Current_Solution</valueSetName>
    </valueSet>
</CustomField>