force-app/main/default/objects/Account/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Account_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bogus Data</fullName>
            </value>
            <value>
                <fullName>Competitor, Employee, Student, Consultant</fullName>
            </value>
            <value>
                <fullName>Embargoed Country</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Seeking non-Seismic Solution</fullName>
            </value>
            <value>
                <fullName>No Longer with Company</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
            <value>
                <fullName>Failed CHEQ validation</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>