force-app/main/default/objects/Account/fields/DNB_Match_Confidence__c.field-meta.xml
<CustomField>
    <fullName>DNB_Match_Confidence__c</fullName>
    <description>Populated by DNB</description>
    <label>DNB Match Confidence</label>
    <length>3</length>
    <type>Text</type>
</CustomField>