force-app/main/default/objects/Account/fields/DNB_Match_Grade__c.field-meta.xml
<CustomField>
    <fullName>DNB_Match_Grade__c</fullName>
    <label>DNB Match Grade</label>
    <length>15</length>
    <type>Text</type>
</CustomField>