force-app/main/default/objects/Account/fields/Do_Industry_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Do_Industry_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox uses values in Sourced Industry and Sourced Sub-Industry to re-calculate an Industry value on Account.  It will be cleared automatically when the Industry Mapping - After Save flow runs successfully.</inlineHelpText>
    <label>Do Industry Mapping</label>
    <type>Checkbox</type>
</CustomField>