force-app/main/default/objects/Account/fields/Do_Not_Merge__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Merge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify that an account has been verified by Sales Operations as needing to be a separate account, regardless of deduplication rules.</description>
    <inlineHelpText>Used to identify that an account has been verified by Sales Operations as needing to be a separate account, regardless of deduplication rules.</inlineHelpText>
    <label>Do Not Merge</label>
    <type>Checkbox</type>
</CustomField>