force-app/main/default/objects/Account/fields/Domains__c.field-meta.xml
<CustomField>
    <fullName>Domains__c</fullName>
    <description>Used to validate that a contact is related to the correct account. Values are comma delimited.</description>
    <inlineHelpText>Used to validate that a contact is related to the correct account. Values are comma delimited.</inlineHelpText>
    <label>Domains</label>
    <length>255</length>
    <type>Text</type>
</CustomField>