force-app/main/default/objects/Account/fields/Domestic_Ultimate_DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_DUNS_Number__c</fullName>
    <description>Populated from related D &amp; B Company related object</description>
    <inlineHelpText>Populated from related D &amp; B Company related object</inlineHelpText>
    <label>Domestic Ultimate - DUNS Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>