force-app/main/default/objects/Account/fields/DotheyuseaCItool__c.field-meta.xml
<CustomField>
    <fullName>DotheyuseaCItool__c</fullName>
    <label>Do they use a CI tool?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>