force-app/main/default/objects/Account/fields/DOZISF__ZoomInfo_Enrich_Status__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__ZoomInfo_Enrich_Status__c</fullName>
    <label>ZoomInfo Enrich Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enriched</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>No-Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>