force-app/main/default/objects/Account/fields/DUNS_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Business_Name__c</fullName>
    <description>Populated from related D &amp; B Company related object</description>
    <inlineHelpText>Populated from related D &amp; B Company related object</inlineHelpText>
    <label>DUNS Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>