force-app/main/default/objects/Account/fields/DUNsNumber__c.field-meta.xml
<CustomField>
    <fullName>DUNsNumber__c</fullName>
    <label>DUNs Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>