force-app/main/default/objects/Account/fields/Duplicate_Record_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Record_Set_Name__c</fullName>
    <description>Used by Salesforce Admins Only for Account Deduplication.  Not on any page layouts.</description>
    <inlineHelpText>Used by Salesforce Admins Only for Account Deduplication. Not on any page layouts.</inlineHelpText>
    <label>Duplicate Record Set Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>