force-app/main/default/objects/Account/fields/Email_Client__c.field-meta.xml
<CustomField>
    <fullName>Email_Client__c</fullName>
    <label>Email Client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1&amp;! Mail</fullName>
            </value>
            <value>
                <fullName>123 Reg Email Hosting</fullName>
            </value>
            <value>
                <fullName>Amazon WorkMail</fullName>
            </value>
            <value>
                <fullName>Apptix Hosted Exchange</fullName>
            </value>
            <value>
                <fullName>Aruba Email</fullName>
            </value>
            <value>
                <fullName>AT&amp;T Business Class Email</fullName>
            </value>
            <value>
                <fullName>atmail</fullName>
            </value>
            <value>
                <fullName>BlueTie</fullName>
            </value>
            <value>
                <fullName>Carrierzone (mail server)</fullName>
            </value>
            <value>
                <fullName>Catholic Health Initiatives (mail server)</fullName>
            </value>
            <value>
                <fullName>Ceryx</fullName>
            </value>
            <value>
                <fullName>CHS Community Health Systems (mail server)</fullName>
            </value>
            <value>
                <fullName>Cisco Unified Email Interaction Manager</fullName>
            </value>
            <value>
                <fullName>Cleartext Systems (Mail Server)</fullName>
            </value>
            <value>
                <fullName>Cogent Communications (mail server)</fullName>
            </value>
            <value>
                <fullName>CSC Corp (mail server)</fullName>
            </value>
            <value>
                <fullName>CSI Web (mail server)</fullName>
            </value>
            <value>
                <fullName>DaemonMail</fullName>
            </value>
            <value>
                <fullName>Earthlink Mail</fullName>
            </value>
            <value>
                <fullName>easyDNS Email Hosting</fullName>
            </value>
            <value>
                <fullName>Education Networks of America Mail</fullName>
            </value>
            <value>
                <fullName>Electricmail.com (mail server)</fullName>
            </value>
            <value>
                <fullName>Eleven (mail server)</fullName>
            </value>
            <value>
                <fullName>enom Custom Email</fullName>
            </value>
            <value>
                <fullName>Everyone.net</fullName>
            </value>
            <value>
                <fullName>FastMail</fullName>
            </value>
            <value>
                <fullName>General Motors (mail server)</fullName>
            </value>
            <value>
                <fullName>Global Relay Communications (mail server)</fullName>
            </value>
            <value>
                <fullName>Gmail</fullName>
            </value>
            <value>
                <fullName>Gmail for business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>