force-app/main/default/objects/Account/fields/Email_Provider__c.field-meta.xml
<CustomField>
    <fullName>Email_Provider__c</fullName>
    <label>Email Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office 365</fullName>
            </value>
            <value>
                <fullName>Gmail</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>