force-app/main/default/objects/Account/fields/Engagement_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_To_Date__c</fullName>
    <label>Engagement To Date</label>
    <type>TextArea</type>
</CustomField>