force-app/main/default/objects/Account/fields/Engagio_Engagement_Minutes_1_mo__c.field-meta.xml
<CustomField>
    <fullName>Engagio_Engagement_Minutes_1_mo__c</fullName>
    <label>Engagement Minutes (1 mo)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>