force-app/main/default/objects/Account/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Journey Stage: Evaluation – The buying group is evaluating options.</description>
    <label>Evaluation</label>
    <type>Checkbox</type>
</CustomField>