force-app/main/default/objects/Account/fields/Evergreen_NDA__c.field-meta.xml
<CustomField>
    <fullName>Evergreen_NDA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-4795 - Used by partner team to indicate that NDA Agreement is evergreen</description>
    <inlineHelpText>Used by partner team to indicate that NDA Agreement is evergreen</inlineHelpText>
    <label>Evergreen NDA</label>
    <type>Checkbox</type>
</CustomField>