force-app/main/default/objects/Account/fields/Exclude_From_Automated_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Automated_Hierarchy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Excludes this account from having its parent updated from the automated d&amp;b hierarchy job</description>
    <label>Exclude From Automated Hierarchy</label>
    <type>Checkbox</type>
</CustomField>