force-app/main/default/objects/Account/fields/Exclude_from_Hierarchy_Enrichment__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Hierarchy_Enrichment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-4702 - Checkbox used in conjunction with validation rule to block any updates on ZoomInfo ID, ZoomInfo Parent or ZoomInfo Ultimate parent id fields when this field is checked.</description>
    <inlineHelpText>Checkbox used in conjunction with validation rule to block any updates on ZoomInfo ID, ZoomInfo Parent or ZoomInfo Ultimate parent id fields when this field is checked.</inlineHelpText>
    <label>Exclude from Hierarchy Enrichment</label>
    <type>Checkbox</type>
</CustomField>