force-app/main/default/objects/Account/fields/Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor__c</fullName>
    <label>Executive Sponsor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andy Bergen</fullName>
            </value>
            <value>
                <fullName>Donna DeBerry</fullName>
            </value>
            <value>
                <fullName>Doug Winter</fullName>
            </value>
            <value>
                <fullName>Ed Calnan</fullName>
            </value>
            <value>
                <fullName>John McCauley</fullName>
            </value>
            <value>
                <fullName>Krish Mantripragada</fullName>
            </value>
            <value>
                <fullName>Marc Romano</fullName>
            </value>
            <value>
                <fullName>Mike Orr</fullName>
            </value>
            <value>
                <fullName>Randy Wootton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>