force-app/main/default/objects/Account/fields/Executive_Sponsor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor_Notes__c</fullName>
    <label>Executive Sponsor Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>