force-app/main/default/objects/Account/fields/Firm_CRD__c.field-meta.xml
<CustomField>
    <fullName>Firm_CRD__c</fullName>
    <description>Central Registration Depository (CRD) number is FINRA&apos;s unique identifier for registered firms. FINRA administers the CRD number series but it is utilized by all regulators including Securities and Exchange Commission (SEC) and all state securities commissions. The number is unique and never recycled.</description>
    <inlineHelpText>Central Registration Depository (CRD) number is FINRA&apos;s unique identifier for registered firms.</inlineHelpText>
    <label>Firm CRD</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>