force-app/main/default/objects/Account/fields/Fiscal_Year_Start__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_Start__c</fullName>
    <label>Fiscal Year Start</label>
    <type>Date</type>
</CustomField>