force-app/main/default/objects/Account/fields/FY23MarketSegment2H__c.field-meta.xml
<CustomField>
    <fullName>FY23MarketSegment2H__c</fullName>
    <description>FY23 Market Segment for the 2nd Half of the year</description>
    <formula>IF(Vertical__c=&apos;Financial Services&apos;
,IF(NumberOfEmployees &gt; 2999 &amp;&amp; (Geo_Text__c =&apos;NA&apos; || Geo_Text__c = &apos;EMEA&apos; || Geo_Text__c = &apos;SA&apos;),&apos;Enterprise&apos;,IF(NumberOfEmployees &gt; 699 &amp;&amp; Geo_Text__c =&apos;APAC&apos;,&apos;Enterprise&apos;,&apos;FS Unassigned&apos;))
,IF((Geo_Text__c =&apos;NA&apos; || Geo_Text__c = &apos;EMEA&apos; || Geo_Text__c = &apos;SA&apos;),IF((NumberOfEmployees &gt; 2999 &amp;&amp; (Geo_Text__c = &apos;EMEA&apos;|| Geo_Text__c = &apos;SA&apos;))||(NumberOfEmployees &gt; 2999 &amp;&amp; Geo_Text__c = &apos;NA&apos;),&apos;Enterprise&apos;,&apos;Commercial&apos;),IF(Geo_Text__c =&apos;APAC&apos;,IF(NumberOfEmployees &gt; 699,&apos;Enterprise&apos;,&apos;Commercial&apos;),&apos;&apos;)))</formula>
    <inlineHelpText>FY23 Market Segment for the 2nd Half of the year</inlineHelpText>
    <label>FY24 Market Segment</label>
    <type>Text</type>
</CustomField>