force-app/main/default/objects/Account/fields/Gainsight_IDGainsight__c.field-meta.xml
<CustomField>
    <fullName>Gainsight_IDGainsight__c</fullName>
    <label>Gainsight IDSFDC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>