force-app/main/default/objects/Account/fields/Gainsight_Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Gainsight_Overall_Score__c</fullName>
    <description>INTEGRATION FIELD: Used heavily by Gainsight.  This is a measurement of Sentiment + usage.  It is calculated to be an overall score for all products.  A score of F means that all products are being canceled.  a score of F along with a Churn Date in the past, will cause the record type to change from Customer to Previous Customer.</description>
    <inlineHelpText>This is a measurement of Sentiment + usage.  It is calculated to be an overall score for all products.  A score of F means that all products are being canceled.  a score of F along with a Churn Date in the past, will cause the record type to change from Customer to Previous Customer.</inlineHelpText>
    <label>Gainsight Overall Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>