force-app/main/default/objects/Account/fields/GainsightID__c.field-meta.xml
<CustomField>
    <fullName>GainsightID__c</fullName>
    <label>Gainsight ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>