force-app/main/default/objects/Account/fields/GCPBillingID__c.field-meta.xml
<CustomField>
    <fullName>GCPBillingID__c</fullName>
    <label>GCP Billing ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>