force-app/main/default/objects/Account/fields/General_Customer_Attitude__c.field-meta.xml
<CustomField>
    <fullName>General_Customer_Attitude__c</fullName>
    <description>Craig Okken Requested. Fed by API process.</description>
    <label>General Customer Attitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>