force-app/main/default/objects/Account/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <formula>IF( ISBLANK( BillingCountryLookupAuto__c ) , &apos;TBD&apos;, TEXT(BillingCountryLookupAuto__r.Geo__c))</formula>
    <label>Geo</label>
    <type>Text</type>
</CustomField>