force-app/main/default/objects/Account/fields/Geo_for_Matching__c.field-meta.xml
<CustomField>
    <fullName>Geo_for_Matching__c</fullName>
    <formula>If(Isblank(BillingCountryLookupAuto__c),&apos;NA&apos;,Text(BillingCountryLookupAuto__r.Geo__c))</formula>
    <inlineHelpText>Used by RingLead for matching of accounts</inlineHelpText>
    <label>Geo for Matching</label>
    <type>Text</type>
</CustomField>