force-app/main/default/objects/Account/fields/Geo_Text__c.field-meta.xml
<CustomField>
    <fullName>Geo_Text__c</fullName>
    <description>{Bizible}</description>
    <label>Geo (Text)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>